fix Swagger
